tsb/conf.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blogger-gateway
  namespace: content
  labels:
    istio.io/rev: tsb
  annotations:
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/tenant: content
    tsb.tetrate.io/workspace: blogger-ws
    tsb.tetrate.io/gatewayGroup: blogger-gateway
spec:
  selector:
    app: tsb-gateway-blogger
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - blogger.tetrate.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blogger-dr
  namespace: content
  labels:
    istio.io/rev: tsb
  annotations:
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/tenant: content
    tsb.tetrate.io/workspace: blogger-ws
    tsb.tetrate.io/trafficGroup: blogger-traffic
spec:
  host: blogger.content.svc.cluster.local
  subsets:
    - name: stable
      labels:
        app: blogger-api
    - name: canary
      labels:
        app: blogger-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blogger-vs
  namespace: content
  labels:
    istio.io/rev: tsb
  annotations:
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/tenant: content
    tsb.tetrate.io/workspace: blogger-ws
    tsb.tetrate.io/gatewayGroup: blogger-gateway
spec:
  hosts:
    - "blogger.tetrate.com"
  gateways:
    -  blogger-gateway
  http:
    - route:
        - destination:
            host: blogger.content.svc.cluster.local
            subset: stable
          weight: 100
        - destination:
            host: blogger.content.svc.cluster.local
            subset: canary
          weight: 0
